chore: update package.json and pnpm-lock.yaml for improved script execution and dependency management
- Changed script commands in package.json to use 'pnpm exec' for better compatibility.
- Updated pnpm-lock.yaml with new dependencies and versions, including ESLint and related packages for enhanced linting capabilities.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "vitest"
-  },
+"scripts": {
+  "dev": "pnpm exec next dev",
+  "build": "pnpm exec next build",
+  "start": "pnpm exec next start",
+  "lint": "pnpm exec next lint",
+  "test": "pnpm exec vitest"
+},
   "dependencies": {
     "@edge-runtime/vm": "latest",
     "@hookform/resolvers": "^3.9.1",
