--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "pnpm exec next dev",
-  "build": "pnpm exec next build",
-  "start": "pnpm exec next start",
-  "lint": "pnpm exec next lint",
-  "test": "pnpm exec vitest"
-},
+  "scripts": {
+    "dev": "pnpm exec next dev",
+    "build": "pnpm exec next build",
+    "start": "pnpm exec next start",
+    "lint": "pnpm exec next lint",
+    "test": "pnpm exec vitest"
+  },
   "dependencies": {
     "@edge-runtime/vm": "latest",
     "@hookform/resolvers": "^3.9.1",
@@ -73,6 +73,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "3.2.2",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "postcss": "^8.5",
