fix: update dev script to suppress deprecation warnings and improve error handling in login page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm exec next dev",
+    "dev": "NODE_OPTIONS='--no-deprecation' pnpm exec next dev",
     "build": "pnpm exec next build",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
