--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "happy-dom": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.9.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
