--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "mammoth": "^1.9.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "pdfjs-dist": "^5.3.31",
+    "pdfjs-dist": "4.8.69",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
