--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "mammoth": "^1.9.1",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "pdfjs-dist": "4.8.69",
     "react": "^19",
