--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,27 @@
 name: CI
-
-on:
-  pull_request:
+'on':
   push:
-    branches: [main]
-
+    branches:
+    - main
+  pull_request: null
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Install pnpm
-        run: npm install -g pnpm
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-      - name: Lint
-        run: pnpm lint
-      - name: Test
-        run: pnpm exec vitest run
-      - name: Build
-        run: pnpm build
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: pnpm
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Install dependencies
+      run: pnpm install --frozen-lockfile
+    - name: Lint
+      run: pnpm lint
+    - name: Test
+      run: pnpm exec vitest run
+    - name: Build
+      run: pnpm build
