--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,96 @@
 {
-  "name": "Octavia",
+  "name": "Octavia - Digital Music Management",
   "short_name": "Octavia",
+  "description": "Organize, visualize, and share your musical content",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#fff9f0",
+  "theme_color": "#f59e0b",
   "orientation": "any",
+  "scope": "/",
+  "categories": ["music", "productivity", "utilities"],
+  "lang": "en",
+  "dir": "ltr",
   "icons": [
     {
-      "src": "/logos/octavia-icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/logos/octavia-icon.png",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Performance Mode",
+      "short_name": "Perform",
+      "description": "Launch directly into performance mode",
+      "url": "/performance",
+      "icons": [
+        {
+          "src": "/icons/performance-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Library",
+      "short_name": "Library",
+      "description": "Access your music library",
+      "url": "/library",
+      "icons": [
+        {
+          "src": "/icons/library-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
     }
   ]
 }
