--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "pnpm exec next build",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
-    "test": "pnpm exec vitest run"
+    "test": "pnpm exec vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@edge-runtime/vm": "latest",
@@ -75,14 +78,17 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "3.2.2",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "jsdom": "^26.1.0",
+    "msw": "^2.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
