--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "embla-carousel-react": "8.5.1",
     "happy-dom": "latest",
     "input-otp": "1.4.1",
+    "localforage": "1.10.0",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.9.1",
     "next": "15.2.4",
