--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET=content-files
-ALLOWED_PROXY_HOSTS=
+# Allowed comma-separated hostnames for the /api/proxy endpoint
+ALLOWED_PROXY_HOSTS=demo.supabase.co,imslp.org,uploads.musescore.com
