--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "happy-dom": "latest",
     "input-otp": "1.4.1",
     "localforage": "1.10.0",
