feat: enhance authentication tests and improve content service
- Updated login and signup form tests to mock Firebase authentication context, ensuring accurate user state handling.
- Refactored test cases to improve readability and maintainability, including better error handling and user input simulation.
- Enhanced content service's getAuthenticatedUser function with retry logic for improved session handling and error management.
- Updated pnpm workspace configuration to include additional built dependencies for better package management.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,4 +4,8 @@ ignoredBuiltDependencies:
   - '@firebase/util'
   - protobufjs
 onlyBuiltDependencies:
+  - canvas
+  - esbuild
   - msw
+  - sharp
+  - unrs-resolver
