docs: update env example and rls guidance

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,22 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET=content-files
+
+# Firebase Client configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+
+# Firebase Admin credentials (server only)
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=""
+
+# Supabase service role key for server-side access
+SUPABASE_SERVICE_ROLE_KEY=
+
 # Allowed comma-separated hostnames for the /api/proxy endpoint
 ALLOWED_PROXY_HOSTS=demo.supabase.co,imslp.org,uploads.musescore.com
