--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
+    "workbox-window": "^6.5.4",
     "pdfjs-dist": "4.8.69",
     "react": "^18",
     "react-day-picker": "8.10.1",
