build: ensure custom service worker

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "packageManager": "pnpm@10.12.4",
   "scripts": {
     "dev": "NODE_OPTIONS='--no-deprecation' pnpm exec next dev",
-    "build": "pnpm exec next build",
+    "build": "pnpm exec next build && node scripts/build-sw.js",
+    "build:sw": "node scripts/build-sw.js",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
     "test": "pnpm exec vitest run",
