--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
+# Supabase Database & Storage
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET=content-files
 
-# Firebase Client configuration
+# Supabase service role key for server-side access
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Firebase Server-side (Admin SDK)
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=""
+
+# Firebase Client-side (Browser SDK)
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
@@ -10,13 +19,12 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 
-# Firebase Admin credentials (server only)
-FIREBASE_PROJECT_ID=
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_PRIVATE_KEY=""
-
-# Supabase service role key for server-side access
-SUPABASE_SERVICE_ROLE_KEY=
+# Other
+NEXTAUTH_URL=
 
 # Allowed comma-separated hostnames for the /api/proxy endpoint
 ALLOWED_PROXY_HOSTS=demo.supabase.co,imslp.org,uploads.musescore.com
+
+# APT test helpers
+FIREBASE_TEST_USER_TOKEN=
+FIREBASE_TEST_USER_EMAIL=
