--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,13 @@ jobs:
       run: pnpm lint
     - name: Test
       run: pnpm exec vitest run
+    - name: Test coverage
+      run: pnpm exec vitest run --coverage
+    - name: Upload coverage
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage
+        path: coverage
     - name: Build
       run: pnpm build
