chore: enhance testing setup and coverage reporting
- Added new CI script for running tests with coverage and uploading results to Codecov.
- Updated integration test configurations to include additional test file patterns for better coverage.
- Improved README documentation with detailed testing commands and coverage information.
- Refactored test database configuration to utilize actual environment variables for better security and consistency.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,19 @@ jobs:
     - name: Lint
       run: pnpm lint
     - name: Test
-      run: pnpm exec vitest run
+      run: pnpm test:unit
     - name: Test coverage
-      run: pnpm exec vitest run --coverage
-    - name: Upload coverage
+      run: pnpm test:ci
+    - name: Upload coverage to Codecov
+      if: always()
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage/coverage-final.json
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: false
+        verbose: true
+    - name: Upload coverage artifacts
       if: always()
       uses: actions/upload-artifact@v4
       with:
