--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "test": "pnpm exec vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage --reporter=verbose",
     "test:ui": "vitest --ui",
-    "test:integration": "pnpm exec vitest run --config vitest.config.integration.mts",
-    "test:integration:watch": "pnpm exec vitest --config vitest.config.integration.mts",
+    "test:integration": "NEXT_PUBLIC_SUPABASE_URL=https://test-mock.supabase.co SUPABASE_SERVICE_ROLE_KEY=mock-service-key-for-testing-only pnpm exec vitest run --config vitest.config.integration.mts",
+    "test:integration:watch": "NEXT_PUBLIC_SUPABASE_URL=https://test-mock.supabase.co SUPABASE_SERVICE_ROLE_KEY=mock-service-key-for-testing-only pnpm exec vitest --config vitest.config.integration.mts",
     "test:unit": "pnpm exec vitest run --exclude '**/*.integration.test.{ts,tsx}'",
     "test:all": "pnpm run test:unit && pnpm run test:integration"
   },
