--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         cache: pnpm
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
+    - name: Install Playwright browsers
+      run: pnpm test:e2e:install
     - name: Lint
       run: pnpm lint
     - name: Test
@@ -39,3 +41,12 @@ jobs:
         path: coverage
     - name: Build
       run: pnpm build
+    - name: Run E2E tests
+      run: pnpm test:e2e
+    - name: Upload E2E test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-report
+        path: test-results/
+        retention-days: 30
