chore: update testing configurations and enhance performance mode component
- Refactored test commands in package.json to exclude integration tests from unit test runs, improving test clarity and efficiency.
- Added dotenv as a dependency for managing environment variables in tests.
- Enhanced Vitest configuration to include globals and CSS support for integration tests.
- Improved accessibility in the PerformanceMode component by adding aria-labels and data-testid attributes for better testing and user experience.
- Updated test setup to ensure proper loading of testing libraries and environment variables.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build:sw": "node scripts/build-sw.js",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
-    "test": "pnpm exec vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:ci": "vitest run --coverage --reporter=verbose",
+    "test": "pnpm exec vitest run --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
+    "test:watch": "vitest --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
+    "test:coverage": "vitest run --coverage --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
+    "test:ci": "vitest run --coverage --reporter=verbose --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
@@ -21,9 +21,10 @@
     "test:e2e:install": "playwright install",
     "test:e2e:report": "playwright show-report",
     "test:ui": "vitest --ui",
-    "test:integration": "NEXT_PUBLIC_SUPABASE_URL=https://test-mock.supabase.co SUPABASE_SERVICE_ROLE_KEY=mock-service-key-for-testing-only pnpm exec vitest run --config vitest.config.integration.mts",
-    "test:integration:watch": "NEXT_PUBLIC_SUPABASE_URL=https://test-mock.supabase.co SUPABASE_SERVICE_ROLE_KEY=mock-service-key-for-testing-only pnpm exec vitest --config vitest.config.integration.mts",
-    "test:unit": "pnpm exec vitest run --exclude '**/*.integration.test.{ts,tsx}'",
+    "test:integration": "pnpm exec vitest run --config vitest.config.integration.mts",
+    "test:integration:watch": "pnpm exec vitest --config vitest.config.integration.mts",
+    "test:integration:with-env": "NODE_ENV=test pnpm exec vitest run --config vitest.config.integration.mts",
+    "test:unit": "pnpm exec vitest run --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
     "test:all": "pnpm run test:unit && pnpm run test:integration"
   },
   "dependencies": {
@@ -93,6 +94,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "3.2.2",
+    "dotenv": "^17.2.0",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "jsdom": "^26.1.0",
