--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,22 +43,28 @@
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-256x256.png",
+      "src": "/icons/icon-256x256.webp",
       "sizes": "256x256",
-      "type": "image/png",
+      "type": "image/webp",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/icons/icon-384x384.webp",
       "sizes": "384x384",
-      "type": "image/png",
+      "type": "image/webp",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.webp",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/webp",
       "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512-maskable.webp",
+      "sizes": "512x512",
+      "type": "image/webp",
+      "purpose": "maskable"
     },
     {
       "src": "/icons/icon-512x512-maskable.png",
