--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "happy-dom": "latest",
+    "immer": "^10.1.3",
     "localforage": "1.10.0",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.454.0",
