--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "firebase-admin": "^13.4.0",
     "happy-dom": "latest",
     "immer": "^10.1.3",
+    "isomorphic-dompurify": "^2.26.0",
     "localforage": "1.10.0",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.454.0",
