chore: update test configurations and enhance error handling
- Modified test command in package.json to exclude integration tests from memory limit settings, improving test execution efficiency.
- Updated ContentViewer tests to reflect changes in button accessibility labels, ensuring better user experience and compliance with accessibility standards.
- Enhanced error handling in setlist API routes to return specific 404 responses when setlists are not found, improving user feedback.
- Refactored Supabase mock implementations in tests for better clarity and reliability, ensuring accurate simulation of database interactions.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:sw": "node scripts/build-sw.js",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
-    "test": "NODE_OPTIONS=\"--max-old-space-size=8192 --expose-gc\" pnpm exec vitest run --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
-    "test:watch": "NODE_OPTIONS=\"--max-old-space-size=8192 --expose-gc\" vitest --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
+    "test": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm exec vitest run --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
+    "test:watch": "NODE_OPTIONS=\"--max-old-space-size=8192\" vitest --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
     "test:coverage": "vitest run --coverage --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
     "test:ci": "vitest run --coverage --reporter=verbose --exclude '**/*integration*.test.{ts,tsx}' --exclude '**/integration/**/*.test.{ts,tsx}'",
     "test:e2e": "playwright test",
