feat: enhance testing and configuration for improved security and performance
- Added integration test commands in package.json for better test coverage and organization.
- Updated TypeScript configuration to enforce stricter type checks, enhancing code safety.
- Refactored mock service implementations to return undefined for cache-related methods, improving test reliability.
- Enhanced user authentication tests with additional claims in mock payloads for better simulation of real scenarios.
- Refactored AddContent and MetadataForm components to utilize new structures, improving maintainability and performance.

These changes aim to strengthen the testing framework and improve overall application security and performance.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "test:e2e:report": "playwright show-report",
     "test:ui": "vitest --ui",
     "test:unit": "pnpm run test",
-    "test:all": "pnpm run test && pnpm run test:e2e"
+    "test:integration": "vitest run --config vitest.integration.config.mts",
+    "test:integration:watch": "vitest --config vitest.integration.config.mts",
+    "test:integration:coverage": "vitest run --coverage --config vitest.integration.config.mts",
+    "test:all": "pnpm run test && pnpm run test:integration && pnpm run test:e2e"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
